force-app/main/default/objects/HealthCloudGA__ReciprocalRole__c/fields/HealthCloudGA__CreateInverseRole__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CreateInverseRole__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, a new inverse role is created for the role.</description>
    <inlineHelpText>If checked, a corresponding inverse role is automatically created.</inlineHelpText>
    <label>Create Inverse Role</label>
    <type>Checkbox</type>
</CustomField>