force-app/main/default/objects/HealthCloudGA__ReciprocalRole__c/fields/HealthCloudGA__InverseRelationship__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__InverseRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uniquely identifies the relationship between Role and InverseRole__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
    <label>InverseRelationship</label>
    <referenceTo>HealthCloudGA__ReciprocalRole__c</referenceTo>
    <relationshipLabel>Inverse Relationship</relationshipLabel>
    <relationshipName>InverseRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>