force-app/main/default/objects/HealthCloudGA__ReciprocalRole__c/fields/HealthCloudGA__InverseRole__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__InverseRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inverse Role</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>