force-app/main/default/objects/HealthCloudGA__ReciprocalRole__c/recordTypes/HealthCloudGA__AccountRole.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__AccountRole</fullName>
    <active>true</active>
    <description>Roles associated with Account-Account Relationships</description>
    <label>Account Role</label>
</RecordType>