force-app/main/default/objects/HealthCloudGA__ReciprocalRole__c/recordTypes/HealthCloudGA__ContactRole.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__ContactRole</fullName>
    <active>true</active>
    <description>Roles associated with Contact-Contact Relationships</description>
    <label>Contact Role</label>
</RecordType>