force-app/main/default/objects/HealthCloudGA__ReciprocalRole__c/validationRules/HealthCloudGA__ProhibitUpdates.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__ProhibitUpdates</fullName>
    <active>true</active>
    <description>Enforces that updates to reciprocal roles are prohibited</description>
    <errorConditionFormula>ISCHANGED( HealthCloudGA__CreateInverseRole__c) ||
            ISCHANGED(Name) || ISCHANGED( HealthCloudGA__InverseRole__c ) || ISCHANGED(RecordTypeId)</errorConditionFormula>
    <errorMessage>Reciprocal Role cannot be modified</errorMessage>
</ValidationRule>